feat: add tenant (organization) support for roles and permissions, update DTOs, services, controllers, tests, ER diagram, and README